# cpp_moderno_course

./: .gitignore  README.md
cpp_oo_01/: CMakeLists.txt  main.cpp  people.hpp  student.cpp  student.hpp  time.cpp  time.hpp
cpp_oo_02/: CMakeLists.txt  api.cpp  api.hpp  json.cpp  json.hpp  main.cpp
cpp_oo_03/: CMakeLists.txt  main.cpp  rm_generator.cpp  rm_generator.hpp
cpp_oo_04/: CMakeLists.txt
cpp_oo_04/src/: main.cpp
cpp_oo_05/: CMakeLists.txt
cpp_oo_05/src/: main.cpp
cpp_oo_06/: CMakeLists.txt
cpp_oo_06/src/: main.cpp
cpp_oo_07/: CMakeLists.txt
cpp_oo_07/include/: people.hh
cpp_oo_07/src/: main.cpp
cpp_oo_08/: CMakeLists.txt
cpp_oo_08/include/: list.hh  people.hh
cpp_oo_08/src/: list.cpp  main.cpp  people.cpp
cpp_oo_09/: CMakeLists.txt
cpp_oo_09/src/: main.cpp
cpp_oo_10/: CMakeLists.txt
cpp_oo_10/src/: main.cxx
cpp_oo_11/: CMakeLists.txt
cpp_oo_11/src/: main  main.cpp
cpp_oo_12/: CMakeLists.txt
cpp_oo_12/src/: main.cpp
projects/calculator_gtkmm/: CMakeLists.txt
projects/calculator_gtkmm/src/: main.cpp
projects/date_cpp/: CMakeLists.txt
projects/date_cpp/src/: main.cpp
projects/random_cpp/: CMakeLists.txt
projects/random_cpp/src/: main.cpp
projects/z_code_filter/: CMakeLists.txt
projects/z_code_filter/include/: match.hh  regexp.hh
projects/z_code_filter/src/: main.cpp  match.cpp
